tests/negative/invalid_shift.c
int values[1 << 64];
int main(void) { return 0; }
